# digitalham

./: .gitignore  README.md  agents.md  pubspec.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  flutter-ci.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/digitalham/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/agents/: ft8_ffi.dart
lib/agents/audio_agent/: audio_agent.dart
lib/agents/cicd_agent/: cicd_agent.dart
lib/agents/integration_agent/: integration_agent.dart
lib/agents/security_agent/: security_agent.dart
lib/agents/signal_agent/: signal_agent.dart
lib/agents/storage_agent/: database.dart  database.g.dart  export_service.dart  storage_agent.dart
lib/agents/sync_agent/: sync_agent.dart
lib/agents/test_agent/: test_agent.dart
lib/agents/ui_agent/: ui_agent.dart
libft8_wrapper/: CMakeLists.txt  ft8_wrapper.cpp
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: storage_agent_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
